--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@user/*": ["modules/user/*"],
-      "@attendance/*": ["modules/attendance/*"],
-      "@class/*": ["modules/class/*"]
+      "@app-shared/*": ["src/shared/*"],
+      "@app-modules/*": ["src/modules/*"],
+      "@app-types/*": ["src/types/*"]
     },
     "rootDir": ".",
     "incremental": true,
