--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   },
   "engines": {
     "npm": "please-use-yarn",
-    "node": "22.4.0",
+    "node": ">=22.4.0 <=22.6.0",
     "yarn": "^1.22.0"
   }
 }
