--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,14 +40,19 @@ jobs:
     steps:
       # Step 1: Checkout the code from the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       # Step 2: Set up Node.js
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: '22.4.0' # Specify your Node.js version
-
+      - name: Check Postgres Service
+        run: |
+          echo "Postgres User: ${{ secrets.POSTGRES_USER }}"
+          echo "Postgres Password: ${{ secrets.POSTGRES_PASSWORD }}"
+          echo "Postgres DB: ${{ secrets.POSTGRES_DB }}"
+          pg_isready -h localhost -p 5432
       # Step 3: Install dependencies (npm or yarn)
       - name: Install dependencies
         run: yarn install # or yarn install
