--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
         image: postgres:16 # Specify the PostgreSQL version
         env:
           POSTGRES_USER: test_user # Set the PostgreSQL user
-          POSTGRES_PASSWORD: test_pass # Set the PostgreSQL password
-          POSTGRES_DB: test_db # Set the PostgreSQL database
+          POSTGRES_PASSWORD: testpass # Set the PostgreSQL password
+          POSTGRES_DB: testdb # Set the PostgreSQL database
         options: >- # Options to wait for PostgreSQL to start
           --health-cmd "pg_isready -U test_user" 
           --health-interval 10s 
@@ -33,8 +33,8 @@ jobs:
       DB_HOST: 127.0.0.1 # PostgreSQL is running locally in the container
       DB_PORT: 5432 # PostgreSQL default port
       DB_USERNAME: test_user # Match the user set in the postgres service
-      DB_PASSWORD: test_pass # Match the password set in the postgres service
-      DB_NAME: test_db # Match the database set in the postgres service
+      DB_PASSWORD: testpass # Match the password set in the postgres service
+      DB_NAME: testdb # Match the database set in the postgres service
       NODE_ENV: test # Set the Node.js environment to test
 
     steps:
