--- a/.github/config/docker/docker-compose.ci.yml
+++ b/.github/config/docker/docker-compose.ci.yml
@@ -10,12 +10,10 @@ services:
       - _APP_USAGE_STATS=false
       - _APP_DOMAIN=http://localhost
       - _APP_PLATFORM_CONSOLE_HOSTNAME=http://localhost
-      - _APP_DATABASE_HOST=postgres
-      - _APP_DATABASE_USER=testuser
-      - _APP_DATABASE_PASSWORD=testpass
-      - _APP_DATABASE_NAME=testdb
     ports:
       - '80:80'
+    depends_on:
+      - mariadb
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost/v1']
       interval: 10s
@@ -23,17 +21,20 @@ services:
       start_period: 10s
       timeout: 2s
 
-  postgres:
-    image: postgres:16
-    environment:
-      - POSTGRES_USER=testuser
-      - POSTGRES_PASSWORD=testpass
-      - POSTGRES_DB=testdb
+  # MariaDB for Appwrite
+  mariadb:
+    image: mariadb:latest
+    environment: MYSQL_ROOT_PASSWORD=root
+      MYSQL_DATABASE=testdb
+      MYSQL_USER=testuser
+      MYSQL_PASSWORD=testpass
     ports:
-      - '5433:5432'
+      - '3306:3306'
     healthcheck:
-      test: ['CMD', 'pg_isready', '-U', 'testuser']
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       interval: 10s
       retries: 5
       start_period: 10s
       timeout: 2s
+
+  # Other services (e.g., your app) can be defined here
