--- a/.github/config/docker/docker-compose.ci.yml
+++ b/.github/config/docker/docker-compose.ci.yml
@@ -24,10 +24,11 @@ services:
   # MariaDB for Appwrite
   mariadb:
     image: mariadb:latest
-    environment: MYSQL_ROOT_PASSWORD=root
-      MYSQL_DATABASE=testdb
-      MYSQL_USER=testuser
-      MYSQL_PASSWORD=testpass
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: testdb
+      MYSQL_USER: testuser
+      MYSQL_PASSWORD: testpass
     ports:
       - '3306:3306'
     healthcheck:
