--- a/.github/config/docker/docker-compose.ci.yml
+++ b/.github/config/docker/docker-compose.ci.yml
@@ -9,7 +9,11 @@ services:
       - _APP_STORAGE_DEVICE=local
       - _APP_USAGE_STATS=false
       - _APP_DOMAIN=http://localhost
+      - _APP_DB_HOST=mariadb # Appwrite connects to MariaDB
       - _APP_PLATFORM_CONSOLE_HOSTNAME=http://localhost
+      - _APP_DB_USER=appwriteuser # Appwrite-specific variables
+      - _APP_DB_PASSWORD=appwritepass
+      - _APP_DB_NAME=appwrite
     ports:
       - '80:80'
     depends_on:
@@ -26,9 +30,9 @@ services:
     image: mariadb:latest
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: testdb
-      MYSQL_USER: testuser
-      MYSQL_PASSWORD: testpass
+      MYSQL_DATABASE: appwrite
+      MYSQL_USER: appwriteuser
+      MYSQL_PASSWORD: appwritepass
     ports:
       - '3306:3306'
     healthcheck:
