temp skip integration test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,22 @@ jobs:
         ports:
           - 5432:5432
 
+        # MariaDB service for Appwrite
+      mariadb:
+        image: mariadb:latest
+        env:
+          MYSQL_ROOT_PASSWORD: root # MariaDB-specific env variables
+          MYSQL_DATABASE: appwrite
+          MYSQL_USER: appwriteuser
+          MYSQL_PASSWORD: appwritepass
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     env:
       DB_HOST: 127.0.0.1 # PostgreSQL is running locally in the container
       DB_PORT: 5432 # PostgreSQL default port
@@ -72,17 +88,17 @@ jobs:
         run: yarn run migration:run
 
       # Step 6: Set up Docker Compose for CI (including Appwrite)
-      - name: Start Appwrite and Dependencies
-        run: docker compose -f ./.github/config/docker/docker-compose.ci.yml up -d
+      # - name: Start Appwrite and Dependencies
+      #   run: docker compose -f ./.github/config/docker/docker-compose.ci.yml up -d
 
       # Step 7: Wait for services to be healthy
-      - name: Wait for Appwrite to be ready
-        run: |
-          until curl -s -o /dev/null -w "%{http_code}" http://localhost/v1/health; do
-            echo "Waiting for Appwrite to be ready..."
-            sleep 5
-          done
-        timeout-minutes: 3
+      # - name: Wait for Appwrite to be ready
+      #   run: |
+      #     until curl -s -o /dev/null -w "%{http_code}" http://localhost/v1/health; do
+      #       echo "Waiting for Appwrite to be ready..."
+      #       sleep 5
+      #     done
+      #   timeout-minutes: 1
 
       # Step 8: Run tests
       - name: Run tests
