--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
@@ -38,6 +39,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "jest-mock-extended": "^4.0.0-beta1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "node-appwrite": "^14.1.0",
     "pg": "^8.12.0",
