--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,20 @@
-DB_TYPE=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=yourusername
-DB_PASSWORD=paswword
-DB_NAME=dbname
+DB_TYPE=
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+JWT_SECRET=
+NODE_ENV=
+APPWRITE_ENDPOINT=
+APPWRITE_PROJECT_ID=
+APPWRITE_API_KEY=
+APPWRITE_DATABASE_ID=
+APPWRITE_USER_PROFILE_COLLECTION_ID=
+APPWRITE_ROLES_COLLECTION_ID=
+APPWRITE_ROLE_PERMISSIONS_COLLECTION_ID=
+APPWRITE_PERMISSIONS_COLLECTION_ID=
+APPWRITE_SECRET=
+
+
+
